15/10 v4 y moises separo las aguas